--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,13 +7,13 @@ APP_URL=http://${HOST}:${PORT}
 
 CACHE_VIEWS=false
 
-APP_KEY=
+APP_KEY=meukeyjkjçlkuyoiuytuyr65679ijh
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=pg
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonis
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=docker
+DB_DATABASE=omnistack
 
 HASH_DRIVER=bcrypt
